<resources>
    <string name="app_name">CircuitTrainer</string>
    <string name="num_round_str">Num Rounds:\ </string>
    <string name="round_timer_settings">Time per round:\ </string>
    <string name="rest_timer_settings">Rest per round:\ </string>
    <string name="round_num_edittext"># Rounds\ </string>
    <string name="round_time_edittext_mins"># Minutes\ </string>
    <string name="round_time_edittext_secs">Seconds\ </string>
    <string name="round_rest_edittext">Pause after round (s)</string>
    <string name="start_button">FIGHT</string>
    <string name="round_num">ROUND: </string>
    <string name="pause_button_str">Pause</string>
    <string name="resume_button_str">Resume</string>
    <string name="stop_button_str">Stop</string>


</resources>
