<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paul.circuittrainer.RoundStartFragment"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@drawable/boxingglovesmaller">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/timer_rel_layout">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/round_num_top"
            android:layout_above="@id/formatted_time"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_num"
                android:textColor="#FFFFFF"
                android:id="@+id/round_num_str"
                android:fontFamily="@font/bangers"
                android:layout_marginRight="3dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="#FFFFFF"
                android:id="@+id/curr_round"
                android:fontFamily="@font/bangers"
                android:layout_toEndOf="@id/round_num_str"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/5"
                android:textColor="#FFFFFF"
                android:id="@+id/total_rounds"
                android:fontFamily="@font/bangers"
                android:layout_toEndOf="@id/curr_round"/>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formatted_time"
            android:text="05:39"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:fontFamily="@font/bangers"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/round_buttons_rel_layout"
            android:layout_below="@id/formatted_time"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pause_resume_button"
                android:fontFamily="@font/bangers"
                android:background="@drawable/fight_button"
                android:textColor="#FFFFFF"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/pause_button_str"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stop_button"
                android:text="@string/stop_button_str"
                android:fontFamily="@font/bangers"
                android:background="@drawable/fight_button"
                android:textColor="#FFFFFF"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:layout_toEndOf="@id/pause_resume_button"/>

        </RelativeLayout>

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/back_button"-->
            <!--android:text="js pres back.."-->
            <!--android:fontFamily="@font/bangers"-->
            <!--android:layout_below="@id/round_buttons_rel_layout"-->
            <!--android:layout_centerHorizontal="true"/>-->

    </RelativeLayout>

</FrameLayout>
